<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:src="@drawable/printer"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginRight="@dimen/fiftydp"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical"
        android:id="@+id/click_after_amount"
        android:layout_marginBottom="@dimen/login_edittext_height">
        <LinearLayout
            android:visibility="gone"
            android:background="@color/peripherals_button_color_blue"
            android:gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/checkpoint_header_height">

            <ImageView
                android:id="@+id/imageView"
                android:src="@drawable/ic_white_close_icons"
                android:gravity="center"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:layout_weight="0.9"
            android:id="@+id/success_transaction"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/gifimage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Transaction Successful"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Transaction ID: tx20180227"
                    android:textSize="20sp"
                    android:visibility="gone" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="@dimen/checkpoint_ll_width"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/total_amount_layout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/total_amount_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rs. 200"
                    android:textColor="@color/grays"
                    android:textSize="@dimen/checkpoint_rupee_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/text_view_layout">

                <TextView
                    android:id="@+id/text_select_pay_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Mode Of Payment:-"
                    android:textColor="@color/grays"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal"
                android:id="@+id/radio_layout">

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_group_payment_mode">


                <RadioButton
                    android:id="@+id/rbt_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grays"
                    android:layoutDirection="ltr"
                    android:padding="@dimen/radionbuttonpadding"
                    android:text="@string/cash"
                    android:textColor="@color/grays"
                    android:textSize="@dimen/checkpoint_radiobutton_textsize" />

                <RadioButton
                    android:id="@+id/rbt_debitcard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grays"
                    android:layoutDirection="ltr"
                    android:padding="@dimen/radionbuttonpadding"
                    android:text="@string/debit"
                    android:textColor="@color/grays"
                    android:textSize="@dimen/checkpoint_radiobutton_textsize" />

                <RadioButton
                    android:id="@+id/rbt_creditcard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grays"
                    android:layoutDirection="ltr"
                    android:padding="@dimen/radionbuttonpadding"
                    android:text="@string/credit"
                    android:textColor="@color/grays"
                    android:textSize="@dimen/checkpoint_radiobutton_textsize" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_status_print"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Click on print button and select printer"
                android:textSize="20sp"
                android:textColor="@color/grays"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_print_image"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="7dp"
                app:layout_constraintVertical_bias="1.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.501"
                android:gravity="center"/>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="1"
                android:id="@+id/offer_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/checkpoint_header_height"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:background="@color/radio_button_color"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/font_awesome_print_icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:gravity="center"
                        android:text="@string/font_awesome_print_icon"
                        android:textColor="#fff"
                        android:textSize="@dimen/checkpoint_fontawsome_icon_size" />

                    <TextView
                        android:visibility="visible"
                        android:id="@+id/font_awesome_print_icon1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="Print Reciept"
                        android:textColor="#fff"
                        android:textSize="@dimen/checkpoint_text_size" />
                    
                </LinearLayout>



        </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="1"
                android:id="@+id/close">

            <Button
                android:id="@+id/go_to_home"
                android:layout_width="match_parent"
                android:text="Continue Shopping"
                android:textColor="@color/white"
                android:background="@color/radio_button_color"
                android:layout_height="@dimen/checkpoint_header_height" />

            </LinearLayout>

    </LinearLayout>



</LinearLayout>


</LinearLayout>